--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -67,7 +67,7 @@
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_storehouse_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Entrepots
                                 </a>
                             </li>
