Creation de la vue de creation d'un entrepot

--- a/src/A2/StorehouseBundle/Resources/views/Storehouse/index.html.twig
+++ b/src/A2/StorehouseBundle/Resources/views/Storehouse/index.html.twig
@@ -32,7 +32,7 @@
                     {{ storehouse.name }}
                 </td>
                 <td>
-                    {{ sorehouse.manager.user.name }} {{ storehouse.manager.user.lastname }}
+                    {{ storehouse.manager.user.name }} {{ storehouse.manager.user.lastname }}
                 </td>
                 <td>
                     <a href="{{ path('a2_storehouse_show', { 'id': storehouse.id }) }}">Détails</a> |
