--- a/src/A2/StorehouseBundle/Resources/views/Storehouse/show.html.twig
+++ b/src/A2/StorehouseBundle/Resources/views/Storehouse/show.html.twig
@@ -1,52 +1,73 @@
-{% extends 'base.html.twig' %}
+{% extends "A2StorehouseBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Storehouse</h1>
+{% block storehouse_content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ storehouse.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ storehouse.name }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ storehouse.adminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if storehouse.dateAdd %}{{ storehouse.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ storehouse.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if storehouse.dateUpdate %}{{ storehouse.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if storehouse.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails de l'entrepôt</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('storehouse_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('storehouse_edit', { 'id': storehouse.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ storehouse.name }}
+            </dd>
+
+            {% if storehouse.manager is not null %}
+                <dt>
+                    Manager
+                </dt>
+                <dd>
+                    {{ storehouse.manager.name }}
+                </dd>
+            {% endif %}
+
+            <dt>
+                Adresse
+            </dt>
+            <dd>
+                {{ storehouse.address.streetNb }} {{ storehouse.address.streetName }} <br />
+                {% if storehouse.address.complement is not null %}
+                    {{ storehouse.address.complement }} <br />
+                {% endif %}
+                {{ storehouse.address.zipCode }}, {{ storehouse.address.town }}, {{ storehouse.address.country }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ storehouse.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if storehouse.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ nameUserUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ storehouse.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_storehouse_index') }}">Retour à la liste</a> |
+        <a href="{{ path('a2_storehouse_edit', { 'id': storehouse.id }) }}">Modifier</a>
+    </p>
+
+{% endblock storehouse_content %}
