--- a/src/A2/StorehouseBundle/Resources/views/Storehouse/edit.html.twig
+++ b/src/A2/StorehouseBundle/Resources/views/Storehouse/edit.html.twig
@@ -1,21 +1,70 @@
-{% extends 'base.html.twig' %}
+{% extends "A2StorehouseBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Storehouse edit</h1>
+{% block storehouse_content %}
+
+    <h2>Modification de l'entrepôt</h2>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+
+    {{ form_errors(edit_form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(edit_form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.name, {'attr': {'class': 'form-control', 'value': storehouse.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.manager, "Manager", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.manager) }}
+            <div class="col-md-4">
+                {% if storehouse.manager is not null %}
+                    {{ form_widget(edit_form.manager, {'attr': {'class': 'form-control', 'value': storehouse.manager.name }}) }}
+                {% else %}
+                    {{ form_widget(edit_form.manager, {'attr': {'class': 'form-control'}}) }}
+                {% endif %}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.address, "Adresse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.address.streetNb) }}
+            <div class="col-md-3">
+                {{ form_widget(edit_form.address.streetNb, {'attr': {'class': 'form-control', 'value': storehouse.address.streetNb }}) }}
+            </div>
+            {{ form_errors(edit_form.address.streetName) }}
+            <div class="col-md-7">
+                {{ form_widget(edit_form.address.streetName, {'attr': {'class': 'form-control', 'value': storehouse.address.streetName }}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(edit_form.address.complement) }}
+            <div class="col-md-10">
+                {{ form_widget(edit_form.address.complement, {'attr': {'class': 'form-control', 'value': storehouse.address.complement }}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(edit_form.address.zipCode) }}
+            <div class="col-md-3">
+                {{ form_widget(edit_form.address.zipCode, {'attr': {'class': 'form-control', 'value': storehouse.address.zipCode }}) }}
+            </div>
+            {{ form_errors(edit_form.address.town) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.address.town, {'attr': {'class': 'form-control', 'value': storehouse.address.town }}) }}
+            </div>
+            {{ form_errors(edit_form.address.country) }}
+            <div class="col-md-3">
+                {{ form_widget(edit_form.address.country, {'attr': {'class': 'form-control', 'value': storehouse.address.country }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Valider" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_storehouse_index') }}">Retour à la liste</a></p>
+
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('storehouse_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+{% endblock storehouse_content %}
