--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -43,7 +43,7 @@
                             </ul>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_supplier_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Fournisseurs
                                 </a>
                             </li>
