Creation de la vue de listage des fournisseurs

--- a/src/A2/SupplierBundle/Resources/views/Supplier/index.html.twig
+++ b/src/A2/SupplierBundle/Resources/views/Supplier/index.html.twig
@@ -1,49 +1,40 @@
-{% extends 'base.html.twig' %}
+{% extends "A2SupplierBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Suppliers list</h1>
+{% block supplier_content %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Adminadd</th>
-                <th>Dateadd</th>
-                <th>Userupdate</th>
-                <th>Dateupdate</th>
-                <th>Isactive</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <h2>Liste des Fournisseurs</h2>
+    <p><a href="{{ path('a2_supplier_new') }}">Créer un nouveau fournisseur</a></p>
+
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
+    <table align="right">
+        <tr>
+            <td>Rechercher un fournisseur</td>
+            <td>{{ form_widget(form.searchString, {'attr': {'class': 'form-control'}}) }}</td>
+            <td><input type="submit" value="Rechercher" class="btn btn-default"></td>
+        </tr>
+    </table>
+    {{ form_end(form) }}
+
+    <table class="table">
+        <tr>
+            <th>
+                Nom
+            </th>
+        </tr>
+
         {% for supplier in suppliers %}
             <tr>
-                <td><a href="{{ path('supplier_show', { 'id': supplier.id }) }}">{{ supplier.id }}</a></td>
-                <td>{{ supplier.name }}</td>
-                <td>{{ supplier.adminAdd }}</td>
-                <td>{% if supplier.dateAdd %}{{ supplier.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ supplier.userUpdate }}</td>
-                <td>{% if supplier.dateUpdate %}{{ supplier.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if supplier.isActive %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('supplier_show', { 'id': supplier.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('supplier_edit', { 'id': supplier.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    {{ storehouse.name }}
+                </td>
+                <td>
+                    <a href="{{ path('a2_supplier_show', { 'id': supplier.id }) }}">Détails</a> |
+                    <a href="{{ path('a2_supplier_edit', { 'id': supplier.id }) }}">Modifier</a> |
+                    <a href="{{ path('a2_supplier_delete', { 'id': supplier.id }) }}">Supprimer</a>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('supplier_new') }}">Create a new supplier</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock supplier_content %}
