--- a/src/A2/SupplierBundle/Resources/views/Supplier/new.html.twig
+++ b/src/A2/SupplierBundle/Resources/views/Supplier/new.html.twig
@@ -1,16 +1,59 @@
-{% extends 'base.html.twig' %}
+{% extends "A2SupplierBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Supplier creation</h1>
+{% block supplier_content %}
+
+    <h2>Ajout d'un nouveau fournisseur</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.address, "Adresse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.address.streetNb) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.streetNb, {'attr': {'class': 'form-control', 'placeholder': 'No Rue'}}) }}
+            </div>
+            {{ form_errors(form.address.streetName) }}
+            <div class="col-md-7">
+                {{ form_widget(form.address.streetName, {'attr': {'class': 'form-control', 'placeholder': 'Rue'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.complement) }}
+            <div class="col-md-10">
+                {{ form_widget(form.address.complement, {'attr': {'class': 'form-control', 'placeholder': 'Complément'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.zipCode) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.zipCode, {'attr': {'class': 'form-control', 'placeholder': 'Cde Postal'}}) }}
+            </div>
+            {{ form_errors(form.address.town) }}
+            <div class="col-md-4">
+                {{ form_widget(form.address.town, {'attr': {'class': 'form-control', 'placeholder': 'Ville'}}) }}
+            </div>
+            {{ form_errors(form.address.country) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.country, {'attr': {'class': 'form-control', 'placeholder': 'Pays'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_model_index') }}">Retour à la liste</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('supplier_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock supplier_content %}
