--- a/src/A2/SupplierBundle/Resources/views/Supplier/show.html.twig
+++ b/src/A2/SupplierBundle/Resources/views/Supplier/show.html.twig
@@ -1,52 +1,64 @@
-{% extends 'base.html.twig' %}
+{% extends "A2SupplierBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Supplier</h1>
+{% block supplier_content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ supplier.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ supplier.name }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ supplier.adminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if supplier.dateAdd %}{{ supplier.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ supplier.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if supplier.dateUpdate %}{{ supplier.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if supplier.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails du fournisseur</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('supplier_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('supplier_edit', { 'id': supplier.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ supplier.name }}
+            </dd>
+
+            <dt>
+                Adresse
+            </dt>
+            <dd>
+                {{ supplier.address.streetNb }} {{ supplier.address.streetName }} <br />
+                {% if supplier.address.complement is not null %}
+                    {{ supplier.address.complement }} <br />
+                {% endif %}
+                {{ supplier.address.zipCode }}, {{ supplier.address.town }}, {{ supplier.address.country }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ supplier.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if supplier.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ nameUserUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ supplier.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_supplier_index') }}">Retour à la liste</a> |
+        <a href="{{ path('a2_supplier_edit', { 'id': supplier.id }) }}">Modifier</a>
+    </p>
+
+{% endblock supplier_content %}
