Creation de la vue de suppression d'un fournisseur

--- a/src/A2/SupplierBundle/Resources/views/Supplier/index.html.twig
+++ b/src/A2/SupplierBundle/Resources/views/Supplier/index.html.twig
@@ -26,7 +26,7 @@
         {% for supplier in suppliers %}
             <tr>
                 <td>
-                    {{ storehouse.name }}
+                    {{ supplier.name }}
                 </td>
                 <td>
                     <a href="{{ path('a2_supplier_show', { 'id': supplier.id }) }}">Détails</a> |
