Ajout du lien vers les commandes dans le menu principal

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -49,7 +49,7 @@
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_orders_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Commandes
                                 </a>
                             </li>
