suppression de isReceived de OrdersType

--- a/src/A2/OrderBundle/Resources/views/layout.html.twig
+++ b/src/A2/OrderBundle/Resources/views/layout.html.twig
@@ -7,7 +7,7 @@
     {# Ici on pourra afficher un truc commun à toutes les vues du bundle #}
 
     {# On définit ce block, dans lequel vont venir s'insérer les autres vues du bundle #}
-    {% block order_content %}
+    {% block orders_content %}
     {% endblock orders_content %}
 
 {% endblock content %}
