--- a/src/A2/OrderBundle/Resources/views/Orders/new.html.twig
+++ b/src/A2/OrderBundle/Resources/views/Orders/new.html.twig
@@ -1,16 +1,65 @@
-{% extends 'base.html.twig' %}
+{% extends "A2OrderBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Order creation</h1>
+{% block orders_content %}
+
+    <h2>Créer une nouvelle commande</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.supplier, "Fournisseur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.supplier) }}
+            <div class="col-md-4">
+                {{ form_widget(form.supplier, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.category, "Catégorie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.category) }}
+            <div class="col-md-4">
+                {{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.model, "Modèle", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.model) }}
+            <div class="col-md-4">
+                {{ form_widget(form.model, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.quantity, "Quantité", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.quantity) }}
+            <div class="col-md-4">
+                {{ form_widget(form.quantity, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.details, "Détails", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.details) }}
+            <div class="col-md-4">
+                {{ form_widget(form.details, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.storehouse, "Entrepôt", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.storehouse) }}
+            <div class="col-md-4">
+                {{ form_widget(form.storehouse, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_orders_index') }}">Retour à la liste</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('orders_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock orders_content %}
