--- a/src/A2/OrderBundle/Resources/views/Orders/edit.html.twig
+++ b/src/A2/OrderBundle/Resources/views/Orders/edit.html.twig
@@ -1,21 +1,65 @@
-{% extends 'base.html.twig' %}
+{% extends "A2OrderBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Order edit</h1>
+{% block orders_content %}
+
+    <h2>Modification de la catégorie</h2>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+
+    {{ form_errors(edit_form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(edit_form.supplier, "Fournisseur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.supplier) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.supplier, {'attr': {'class': 'form-control', 'value': order.supplier.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.category, "Catégorie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.category) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.category, {'attr': {'class': 'form-control', 'value': order.category.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.model, "Modèle", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.model) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.model, {'attr': {'class': 'form-control', 'value': order.model.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.quantity, "Quantité", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.quantity) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.quantity, {'attr': {'class': 'form-control', 'value': order.quantity }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.details, "Détails", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.details) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.details, {'attr': {'class': 'form-control', 'value': order.details }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.storehouse, "Entrepôt", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.storehouse) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.storehouse, {'attr': {'class': 'form-control', 'value': order.storehouse.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Valider" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_orders_index') }}">Retour à la liste</a></p>
+
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('orders_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+{% endblock orders_content %}
