--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -6,7 +6,7 @@
 
         <h2>Supercar Application</h2>
         <p>
-            Projet par HADJI Mohamed Allam.
+            Projet par HADJI Mohamed Allam. (Application finalisée à 80%)
         </p>
         <p>
             Supercar est une application web permettant à un concessionnaire automobile de gérer le stock <br />
