--- a/src/A2/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/A2/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,124 +1,124 @@
-{% extends "A2UserBundle::layout.html.twig" %}
+{% extends "CoreBundle::layout.html.twig" %}
 
-{% block fos_user_content %}
+{% block content %}
+    <div class="form-horizontal">
+        <hr />
+        {{ form_start(role_form) }}
 
-    <div class="well-block">
-        <div class="well-title">
-            <h3>Création d'un utilisateur</h3>
-        </div>
-        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-
-            {# Les erreurs général du formulaire #}
-            {{ form_errors(form) }}
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label'}}) }}
-                        {# Affichage des erreurs #}
-                        {{ form_errors(form.name) }}
-                        {# Génération de l'input. #}
-                        {{ form_widget(form.name, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        {{ form_label(form.lastname, "Prénom", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.lastname) }}
-                        {{ form_widget(form.lastname, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        {{ form_label(form.bday, "Date de naissance", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.bday) }}
-                        {{ form_widget(form.bday, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        {{ form_label(form.num, "Numéro", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.num) }}
-                        {{ form_widget(form.num, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        {{ form_label(form.address.streetNb, "N Rue", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.streetNb) }}
-                        {{ form_widget(form.address.streetNb, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <div class="form-group">
-                        {{ form_label(form.address.streetName, "Rue", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.streetName) }}
-                        {{ form_widget(form.address.streetName, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group">
-                        {{ form_label(form.address.complement, "Complement", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.complement) }}
-                        {{ form_widget(form.address.complement, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        {{ form_label(form.address.zipCode, "Code postal", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.zipCode) }}
-                        {{ form_widget(form.address.zipCode, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        {{ form_label(form.address.town, "Ville", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.town) }}
-                        {{ form_widget(form.address.town, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="form-group">
-                        {{ form_label(form.address.country, "Pays", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.address.country) }}
-                        {{ form_widget(form.address.country, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group">
-                        {{ form_label(form.email, "E-mail", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.email) }}
-                        {{ form_widget(form.email, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group">
-                        {{ form_label(form.username, "Nom d'utilisateur", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.username) }}
-                        {{ form_widget(form.username, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group">
-                        {{ form_label(form.plainPassword, "Mot de passe", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.plainPassword) }}
-                        {{ form_widget(form.plainPassword, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="form-group">
-                        {{ form_label(form.image, "Photo de profil", {'label_attr': {'class': 'control-label'}}) }}
-                        {{ form_errors(form.image) }}
-                        {{ form_widget(form.image, {'attr': {'class': 'form-control input-md'}}) }}
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    {# Pour le bouton, pas de label ni d'erreurs, on affiche juste le widget #}
-                    {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
-                </div>
+        {{ form_errors(role_form) }}
+        <div class="form-group">
+            {{ form_label(role_form.role, "Type d'utilisateur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(role_form.role) }}
+            <div class="col-md-4">
+                {{ form_widget(role_form.role, {'attr': {'class': 'form-control'}}) }}
             </div>
+        </div>
+
+        {{ form_start(form) }}
+
+        {{ form_errors(form) }}
+        <div class="form-group">
+            {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.lastname, "Prénom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.lastname) }}
+            <div class="col-md-4">
+                {{ form_widget(form.lastname, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.bday, "Date de naissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.bday) }}
+            <div class="col-md-3">
+                {{ form_widget(form.bday.day, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="col-md-4">
+                {{ form_widget(form.bday.month, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="col-md-3">
+                {{ form_widget(form.bday.year, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.email, "E-mail", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.email) }}
+            <div class="col-md-4">
+                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.address, "Adresse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.address.streetNb) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.streetNb, {'attr': {'class': 'form-control', 'placeholder': 'No Rue'}}) }}
+            </div>
+            {{ form_errors(form.address.streetName) }}
+            <div class="col-md-7">
+                {{ form_widget(form.address.streetName, {'attr': {'class': 'form-control', 'placeholder': 'Rue'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.complement) }}
+            <div class="col-md-10">
+                {{ form_widget(form.address.complement, {'attr': {'class': 'form-control', 'placeholder': 'Complément'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.zipCode) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.zipCode, {'attr': {'class': 'form-control', 'placeholder': 'Cde Postal'}}) }}
+            </div>
+            {{ form_errors(form.address.town) }}
+            <div class="col-md-4">
+                {{ form_widget(form.address.town, {'attr': {'class': 'form-control', 'placeholder': 'Ville'}}) }}
+            </div>
+            {{ form_errors(form.address.country) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.country, {'attr': {'class': 'form-control', 'placeholder': 'Pays'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.num, "Numéro", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.num) }}
+            <div class="col-md-4">
+                {{ form_widget(form.num, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.username, "Nom d'utilisateur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.username) }}
+            <div class="col-md-4">
+                {{ form_widget(form.username, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-2"></div>
+            {{ form_errors(form.plainPassword) }}
+            <div class="col-md-4">
+                {{ form_widget(form.plainPassword) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.image, "Image", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.image) }}
+            <div class="col-md-4">
+                {{ form_widget(form.image.file) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-primary" />
+            </div>
+        </div>
 
         {{ form_end(form) }}
+
+        {{ form_end(role_form) }}
     </div>
+
+    <p><a href="{{ path('a2_user_index') }}">Annuler</a></p>
 
 {% endblock %}
