Remplacement des identifiants dans le login pour les testeurs car j'avais mis les miens

--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -13,7 +13,7 @@
             des véhicules par rapport aux différentes ventes dans les différents entrepôts <br />
             Le concept est l'utilisation de l'application par 3 différents type d'utilisateur :
         </p>
-        <p style="margin-left: 30px"> - L'administrateur, chargé de passer les différentes commandes et avoir un oeil sur l'ensemble des activités (Username : A2lam mdp : Ad001234)</p>
+        <p style="margin-left: 30px"> - L'administrateur, chargé de passer les différentes commandes et avoir un oeil sur l'ensemble des activités (<span style="color: red">Username :</span> testAdmin <span style="color: red">mdp :</span> passAdmin)</p>
         <p style="margin-left: 30px"> - Le manager, dirige un entrepôt et complète les informations concernant les arrivages dans son entrepôt (<span style="color: red">Non disponibe pour le moment</span>)</p>
         <p style="margin-left: 30px"> - Le vendeur, travail dans un entrepôt et procède à des ventes de voitures (<span style="color: red">Non disponibe pour le moment</span>)</p>
 
