Rectification mineur car petites erreurs d'assemblage

--- a/src/A2/StockBundle/Resources/views/Stock/index.html.twig
+++ b/src/A2/StockBundle/Resources/views/Stock/index.html.twig
@@ -28,7 +28,7 @@
             </th>
         </tr>
 
-        {% for order in orders %}
+        {% for stock in stocks %}
             <tr>
                 <td>
                     {{ stock.model.name }}
