--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -55,7 +55,7 @@
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_stock_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Stock
                                 </a>
                             </li>
