Ajout du lien vers les voitures dans le menu princiapal

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -39,7 +39,7 @@
                                 <li><a href="{{ path('a2_category_index') }}">Catégories</a></li>
                                 <li><a href="{{ path('a2_brand_index') }}">Marques</a></li>
                                 <li><a href="{{ path('a2_model_index') }}">Modèles</a></li>
-                                <li><a href="#">Voitures</a></li>
+                                <li><a href="{{ path('a2_car_index') }}">Voitures</a></li>
                             </ul>
 
                             <li>
