--- a/src/A2/CustomerBundle/Resources/views/Customer/sale.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/sale.html.twig
@@ -4,9 +4,9 @@
 
     <h2>Choix parmis les clients existants</h2>
 
-    {{ form_start(form) }}
+    {{ form_start(customer_form) }}
 
-    {{ form_errors(form) }}
+    {{ form_errors(customer_form) }}
     <div class="form-horizontal">
         <hr />
         <div class="form-group">
@@ -25,6 +25,6 @@
 
     <p><a href="{{ path('a2_car_sold', { 'id': car.id }) }}">Annuler</a></p>
 
-    {{ form_end(form) }}
+    {{ form_end(customer_form) }}
 
 {% endblock customer_content %}
